--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "langchain-openai>=0.3.28",
     "langchain-together>=0.3.1",
     "langgraph>=0.6.4",
+    "pipreqs>=0.5.0",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
+    "streamlit>=1.48.0",
     "together>=1.5.23",
 ]
